Modificações para Cadastro e Login
- Implementado cadastro e login separados

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 #div_cadastro_login {
     display: none;
 }
+#div_cadastro{
+    display:none;
+}
 
 input:not([type="submit"]):focus{
     background-color: greenyellow;
