Ajuste de botões
botao_cadastro

- colocado na mesma div do botão Entrar;
- CSS, adicionado background para marcar outra função e texto destacado
em negrito;

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 #div_cadastro_login {
     display: none;
 }
+
+#botao_cadastro{
+	float: right;
+	background-color: #33ab35;
+	font-weight: bold;
+}
+
 #div_cadastro{
     display:none;
 }
