Botões - Implementação & Funcionamento
- Botão "Já tenho login" funcionando.
- Aba "O Projeto" abrindo conteúdo sobre o projeto (Para usuário logado,
ou não).

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,8 @@ input:not([type="submit"]):focus{
 	font-weight: bold;
     background-color: #33ab35;
 }
+#pagina_projeto{
+    display:none;
+}
+
+
