--- a/css/style.css
+++ b/css/style.css
@@ -44,27 +44,31 @@ input:not([type="submit"]):focus{
 	word-wrap: break-word;}
 
 	
-/*div's doacao*/
+/* -- DOACAO -- */
+
 #porque_doar{
+	display: none;}
+#porque_doar_midia{
 	display: none;}
 
 #entidades{
 	display: none;}
+#entidades_midia{
+	display: none;}
 	
 #como_doar{
+	display: none;}
+#como_doar_midia{
 	display: none;}
 
 #brindes{
 	display: none;}
-
-#porque_doar_midia{
-	display: none;}
-	
-#entidades_midia{
-	display: none;}
-	
-#como_doar_midia{
-	display: none;}
-
 #brindes_midia{
 	display: none;}
+
+
+	
+
+	
+
+
