Correções de Bugs byFred
- Login Funcionando.
-  Menu de Doações Funcionando.

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ input:not([type="submit"]):focus{
 #info_doacao{
 	border: 1px solid;
 	word-wrap: break-word;}
+#pagina_doador{
+    display:none;
+}
 
 	
 /* -- DOACAO -- */
