Correção Boleto + Botão Topo
Botão TOPO configurado
Boleto Integrado

--- a/css/style.css
+++ b/css/style.css
@@ -81,4 +81,14 @@ input:not([type="submit"]):focus{
 .green{
 	color:green;}
 
+     /* -- BOTÃO TOPO -- */
+.canto {
+    position: fixed;
+    _position:absolute;
+    _margin-bottom:0;
+    _margin-right:0;
+    right:0;
+    bottom:0;
+    z-index:100;
+}
 
