Botão TOPO aparece quando necessário
Com esta implementação, o botão topo aparece na tela apenas quando
necessário,  e se o usuário estiver no topo da tela ele desaprece.

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,9 @@ input:not([type="submit"]):focus{
 #helper{
 	position: fixed;
 	margin-top: 43%;
-	margin-left:93%;}
+	margin-left:93%;
+        display: none;
+}
 
 .tamanho{
 	max-height: 50%;
