Revert "Formulários e carrosel"
This reverts commit e9da5ab347193db2ca2e1f56fa80cbb2f5dc742b.

--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@
     display:none;}
 
 input:not([type="submit"]):focus{
-	color:black;
+	color:#fff;
 	font-weight: bold;
-    background-color: #79f942;}
+    background-color: #33ab35;}
 
 #pagina_projeto{
     display:none;}
@@ -76,9 +76,6 @@ input:not([type="submit"]):focus{
 
 .white{
 	color: white;}
-
-.black{
-	color: black;}
 	
 .blue{
 	color: blue;}
